--- a/PostGIS_Python/Example_Connection.ipynb
+++ b/PostGIS_Python/Example_Connection.ipynb
@@ -269,6 +269,36 @@
     "\"...PostgreSQL es un sistema de gestión de bases de datos relacionales de objetos (ORDBMS), desarrollado en el Departamento de Informática de la Universidad de California en Berkeley. POSTGRES fue pionero en muchos conceptos que solo estuvieron disponibles en algunos sistemas de bases de datos comerciales mucho más tarde...Y gracias a la licencia liberal, PostgreSQL puede ser utilizado, modificado y distribuido por cualquier persona de forma gratuita y para cualquier propósito, ya sea privado, comercial o académico\"\n",
     "PostgreSQL (https://www.postgresql.org/docs/current/intro-whatis.html)\n",
     "\n",
+    "##### Proceso de instalación\n",
+    "Visitar la página oficial de PostgreSQL (https://www.postgresql.org/download/)\n",
+    "<p align=\"center\"> <img src=\"Imagenes/PostgreSQL.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "\n",
+    "Seleccionar el instalador conforme al sistema operativo\n",
+    "<p align=\"center\"> <img src=\"Imagenes/Instalador.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "\n",
+    "Al ejecutar el instalador, tener en cuenta algunos puntos importantes:\n",
+    "\n",
+    "- Instalación de componentes (pgadmin, stack builder)\n",
+    "<p align=\"center\"> <img src=\"Imagenes/Stack_Builder_Config.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p align=\"center\"> <img src=\"Imagenes/Stack_Builder.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "\n",
+    "- Usuario y contraseña del administrador (Para la demostración, se hace uso de postgres/postgres)\n",
+    "<p align=\"center\"> <img src=\"Imagenes/User_Postgres.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "\n",
+    "- Seleccionar el puerto que se utilizará (Por defecto 5432)\n",
+    "<p align=\"center\"> <img src=\"Imagenes/Port.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### PostGIS\n",
     "\"...PostGIS amplía las capacidades de la base de datos relacional PostgreSQL al agregar soporte para almacenar, indexar y consultar datos geoespaciales....\"\n",
     "Las características de PostGIS incluyen:\n",
@@ -281,6 +311,20 @@
     "- **Integración:** acceda y trabaje con PostGIS utilizando herramientas de terceros como QGIS , GeoServer , MapServer , ArcGIS, Tableau.\n",
     "\n",
     "PostGIS (https://postgis.net/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Proceso de instalación\n",
+    "Abrir Stack Builder e instalar la extensión espacial PostGIS\n",
+    "<p align=\"center\"> <img src=\"Imagenes/PostGIS.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "\n",
+    "Identificar e instalar los componentes a instalar para complementar PostGIS\n",
+    "<p align=\"center\"> <img src=\"Imagenes/Components_PostGIS.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>"
    ]
   },
   {
@@ -475,6 +519,19 @@
     "shp2pgsql -c -s 4269 -i -I shaperoads.shp myschema.roadstable > carreteras.sql \n",
     "psql -d carreterasdb -f carreteras.sql\n",
     "```\n",
+    "\n",
+    "También podría hacerse por medio de la interfaz gráfica. Buscando \"PostGIS PostGIS Bundle 1 for PostgreSQL x64 16 Shapefile and DBF Loader Exporter\"\n",
+    "- Realizar la conexión a la base de datos\n",
+    "<p align=\"center\"> <img src=\"Imagenes/PostGIS_Connection.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "\n",
+    "- Verificar las opciones de importación según las necesidades del usuario\n",
+    "<p align=\"center\"> <img src=\"Imagenes/Options_Import_PostGIS.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "\n",
+    "- Buscar y cargar el archivo Shapefile verificando el nombre con el cual se guardará la tabla y el SRID\n",
+    "<p align=\"center\"> <img src=\"Imagenes/Load_Shp_PostGIS.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
     "\n",
     "Consultar más parámetros: https://postgis.net/docs/manual-3.5/using_postgis_dbmanagement.html#loading-data\n"
    ]
@@ -879,39 +936,6 @@
     "axs[1].axis(\"off\")\n",
     "plt.tight_layout()                                                  # Ajusta el diseño de la figura para evitar solapamientos\n",
     "plt.show()                                                          # Muestra la figura con las dos imágenes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La fórmula para el índice de vegetación normalizado (NDVI) es: \n",
-    "\n",
-    "$$\\text{NDVI} = \\frac{(NIR - RED)}{(NIR + RED)}$$\n",
-    "\n",
-    "<p align=\"center\" style=\"font-size: 12px;\">\n",
-    "<b><strong>Ecuación 1. Ejemplo</strong></b>\n",
-    "</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En la **Tabla 1**, se presenta la **Clasificación de Uso del Suelo - Nivel 1**.\n",
-    "\n",
-    "| Nivel 1 | Nombre                          |\n",
-    "|---------|---------------------------------|\n",
-    "| 1       | Territorios Artificializados   |\n",
-    "| 2       | Territorios Agrícolas          |\n",
-    "| 3       | Bosques y Áreas Seminaturales  |\n",
-    "| 4       | Áreas Húmedas                  |\n",
-    "| 5       | Superficies de Agua            |\n",
-    "\n",
-    "\n",
-    "<p align=\"left\" style=\"font-size: 12px;\">\n",
-    "<b><strong>Tabla 1. Clasificación de Uso del Suelo - Nivel 1</strong></b>\n",
-    "</p>"
    ]
   }
  ],
