--- a/PostGIS_Python/Example_Connection.ipynb
+++ b/PostGIS_Python/Example_Connection.ipynb
@@ -34,18 +34,21 @@
     "    2.11. Llaves foráneas<br>\n",
     "    2.12. Transacciones<br>\n",
     "3. PostgreSQL\n",
+    "    3.1. Instalación\n",
     "4. PostGIS<br>\n",
-    "    4.1. Administración PostGIS<br>\n",
-    "        4.1.1. Modelo de datos espacial<br>\n",
-    "        4.1.2. Tipos de datos geográficos<br>\n",
-    "        4.1.3. Cálculo de atributos geométricos<br>\n",
-    "        4.1.4. Sistemas de referencia espacial<br>\n",
-    "    4.2. Cargar datos espaciales utilizando SQL<br>\n",
-    "        4.2.1. Datos vectoriales<br>\n",
-    "        4.2.2. Extrayendo datos espaciales vectoriales<br>\n",
-    "        4.2.3. Datos ráster<br>\n",
-    "        4.2.4. Extrayendo datos espaciales ráster<br>\n",
-    "5. Caso de estudio: Administración de datos para generación de modelo clasificador de Bosque / No Bosque por medio de PostGIS y Python\n"
+    "    4.1. Instalación\n",
+    "    4.2. Administración PostGIS<br>\n",
+    "        4.2.1. Modelo de datos espacial<br>\n",
+    "        4.2.2. Tipos de datos geográficos<br>\n",
+    "        4.2.3. Cálculo de atributos geométricos<br>\n",
+    "        4.2.4. Sistemas de referencia espacial<br>\n",
+    "    4.3. Cargar datos espaciales utilizando SQL<br>\n",
+    "        4.3.1. Datos vectoriales<br>\n",
+    "        4.3.2. Extrayendo datos espaciales vectoriales<br>\n",
+    "        4.3.3. Datos ráster<br>\n",
+    "        4.3.4. Extrayendo datos espaciales ráster<br>\n",
+    "5. Integración PostGIS / Python\n",
+    "6. Caso de estudio: Administración de datos para generación de modelo clasificador de Bosque / No Bosque por medio de PostGIS y Python\n"
    ]
   },
   {
@@ -627,6 +630,202 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Integración PostGIS / Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Cargar datos desde Shapefile con librerías de python `Geopandas`, `Shapely` y `psycopg2`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GeoPandas: Extensión de Pandas para manejar datos geoespaciales (puntos, líneas, polígonos).\n",
+    "# Permite leer, escribir y analizar datos espaciales en formatos como Shapefile, GeoJSON, etc.\n",
+    "import geopandas as gpd\n",
+    "# Psycopg2: Biblioteca para conectar Python con bases de datos PostgreSQL.\n",
+    "# Se usa para ejecutar consultas SQL, manejar transacciones y trabajar con datos espaciales en PostGIS.\n",
+    "import psycopg2\n",
+    "# Shapely: Biblioteca para la manipulación y análisis de geometrías espaciales.\n",
+    "# 'wkt' (Well-Known Text) permite convertir entre texto y objetos geométricos.\n",
+    "from shapely import wkt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Leer los datos espaciales con ayuda de Geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "shapefile_path = \"./Samples/Samples_Point.shp\"  # Ruta del archivo .shp con datos geoespaciales\n",
+    "gdf = gpd.read_file(shapefile_path)  # Cargar el archivo en un GeoDataFrame\n",
+    "gdf.head()  # Mostrar las primeras filas del GeoDataFrame para inspección"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crear la conexión con la base de datos espacial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_CONFIG = {\n",
+    "    \"dbname\": \"DB_GIS\",                 # Nombre de la base de datos\n",
+    "    \"user\": \"postgres\",                 # Usuario de la base de datos\n",
+    "    \"password\": \"postgres\",             # Contraseña del usuario\n",
+    "    \"host\": \"localhost\",                # Dirección del servidor (localhost si es local)\n",
+    "    \"port\": \"5432\"                      # Puerto predeterminado de PostgreSQL\n",
+    "}\n",
+    "conn = psycopg2.connect(**DB_CONFIG)    # Establecer conexión con la base de datos PostgreSQL\n",
+    "cur = conn.cursor()                     # Crear un cursor para ejecutar comandos SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creación de tabla con columnas a cargar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear una tabla en PostGIS si no existe\n",
+    "create_table_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS training_sample (\n",
+    "    id SERIAL PRIMARY KEY,              -- Identificador único autoincremental\n",
+    "    class TEXT,                         -- Columna para almacenar la clase del punto\n",
+    "    geom GEOMETRY(Geometry, 32619)      -- Columna geométrica con proyección EPSG:32619 (UTM Zona 19N)\n",
+    ");\n",
+    "\"\"\"\n",
+    "cur.execute(create_table_query)     # Ejecutar la consulta SQL para crear la tabla\n",
+    "conn.commit()                       # Confirmar la creación de la tabla en la base de datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insertar los datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "conn.rollback()  # Realizar un rollback por seguridad antes de insertar datos (opcional)\n",
+    "insert_query = \"INSERT INTO training_sample (class, geom) VALUES (%s, ST_GeomFromText(%s, 32619))\"\n",
+    "# Iterar sobre cada fila del GeoDataFrame y cargar los datos en la base de datos\n",
+    "for _, row in gdf.iterrows():\n",
+    "    class_ = row[\"class\"]                       # Extraer el valor de la columna 'class' (ajustar según los nombres de columnas)\n",
+    "    geom = row[\"geometry\"].wkt                  # Convertir la geometría a formato WKT (Well-Known Text)    \n",
+    "    cur.execute(insert_query, (class_, geom))   # Ejecutar la consulta SQL con los valores extraídos\n",
+    "conn.commit()                                   # Confirmar la inserción de datos en la base de datos\n",
+    "cur.close()                                     # Cerrar el cursor y la conexión con la base de datos\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Cargar datos desde archivo .tif con librerías de python `rasterio`, `Shapely` y `psycopg2`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import rasterio\n",
+    "import psycopg2\n",
+    "from rasterio.io import MemoryFile\n",
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_CONFIG = {\n",
+    "    \"dbname\": \"DB_GIS\",                 # Nombre de la base de datos\n",
+    "    \"user\": \"postgres\",                 # Usuario de la base de datos\n",
+    "    \"password\": \"postgres\",             # Contraseña del usuario\n",
+    "    \"host\": \"localhost\",                # Dirección del servidor (localhost si es local)\n",
+    "    \"port\": \"5432\"                      # Puerto predeterminado de PostgreSQL\n",
+    "}\n",
+    "conn = psycopg2.connect(**DB_CONFIG) \n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "# Abrir el archivo raster (.tif)\n",
+    "raster_path = r'C:\\Users\\JHERNANDEZ\\OneDrive - Esri NOSA\\Documentos\\GitHub\\PostGIS_Python\\PostGIS_Python\\temp_raster.tif'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ruta a la carpeta donde están raster2pgsql y psql\n",
+    "pg_bin_path = r\"C:\\Program Files\\PostgreSQL\\16\\bin\"\n",
+    "\n",
+    "# Construir el comando con la ruta completa de raster2pgsql y psql\n",
+    "cmd = fr'\"{pg_bin_path}\\raster2pgsql.exe\" -s 4326 -I -C -M \"{raster_path}\" public.mi_raster | \"{pg_bin_path}\\psql.exe\" -d {DB_CONFIG[\"dbname\"]} -U {DB_CONFIG[\"user\"]}'\n",
+    "\n",
+    "# Ejecutar el comando en la terminal\n",
+    "process = subprocess.run(cmd, shell=True, capture_output=True, text=True)\n",
+    "\n",
+    "# Verificar salida o errores\n",
+    "if process.returncode == 0:\n",
+    "    print(\"✅ Raster cargado exitosamente en PostGIS\")\n",
+    "else:\n",
+    "    print(\"❌ Error al cargar el raster:\", process.stderr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Caso de estudio: Administración de datos para generación de modelo clasificador de Bosque / No Bosque por medio de PostGIS y Python\n",
     "\n",
     "El caso de estudio **\"Bosque - No Bosque\"** consiste en la clasificación de áreas geográficas en dos categorías: regiones con cobertura boscosa y regiones sin cobertura boscosa. Este análisis es fundamental para la gestión ambiental, la planificación territorial y el monitoreo del cambio climático. Para lograr esta clasificación, se integran **datos ráster y vectoriales** almacenados en una base de datos PostgreSQL, combinados con técnicas de Machine Learning en Python.\n",
@@ -955,7 +1154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
