--- a/PostGIS_Python/Example_Connection.ipynb
+++ b/PostGIS_Python/Example_Connection.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -770,11 +770,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rasterio\n",
     "import psycopg2\n",
     "from rasterio.io import MemoryFile\n",
     "import subprocess"
@@ -782,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +794,6 @@
     "}\n",
     "conn = psycopg2.connect(**DB_CONFIG) \n",
     "cur = conn.cursor()\n",
-    "\n",
     "# Abrir el archivo raster (.tif)\n",
     "raster_path = r'C:\\Users\\JHERNANDEZ\\OneDrive - Esri NOSA\\Documentos\\GitHub\\PostGIS_Python\\PostGIS_Python\\temp_raster.tif'"
    ]
@@ -804,22 +802,73 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error al cargar el raster: Acceso denegado.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Ruta a la carpeta donde están raster2pgsql y psql\n",
     "pg_bin_path = r\"C:\\Program Files\\PostgreSQL\\16\\bin\"\n",
-    "\n",
+    "sql_output_path = r\"C:\\Users\\JHERNANDEZ\\OneDrive - Esri NOSA\\Documentos\\GitHub\\PostGIS_Python\\PostGIS_Python\\prueba.sql\"\n",
     "# Construir el comando con la ruta completa de raster2pgsql y psql\n",
-    "cmd = fr'\"{pg_bin_path}\\raster2pgsql.exe\" -s 4326 -I -C -M \"{raster_path}\" public.mi_raster | \"{pg_bin_path}\\psql.exe\" -d {DB_CONFIG[\"dbname\"]} -U {DB_CONFIG[\"user\"]}'\n",
-    "\n",
+    "cmd = fr'\"{pg_bin_path}\\raster2pgsql.exe\" -s 32619 -I -C \"{raster_path}\" >  {sql_output_path}'\n",
     "# Ejecutar el comando en la terminal\n",
     "process = subprocess.run(cmd, shell=True, capture_output=True, text=True)\n",
     "\n",
     "# Verificar salida o errores\n",
     "if process.returncode == 0:\n",
-    "    print(\"✅ Raster cargado exitosamente en PostGIS\")\n",
+    "    print(\"Raster cargado exitosamente en PostGIS\")\n",
     "else:\n",
-    "    print(\"❌ Error al cargar el raster:\", process.stderr)"
+    "    print(\"Error al cargar el raster:\", process.stderr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"PGPASSWORD\"] = DB_CONFIG[\"password\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmd = fr'\"{pg_bin_path}\\psql.exe\" -d {DB_CONFIG[\"dbname\"]} -U {DB_CONFIG[\"user\"]} -h {DB_CONFIG[\"host\"]} -p {DB_CONFIG[\"port\"]} -f \"{sql_output_path}\"'\n",
+    "# Ejecutar el comando\n",
+    "process = subprocess.run(cmd, shell=True, capture_output=True, text=True)\n",
+    "# Limpiar la variable de entorno después de ejecutar el comando\n",
+    "del os.environ[\"PGPASSWORD\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args='\"C:\\\\Program Files\\\\PostgreSQL\\\\16\\\\bin\\\\psql.exe\" -d DB_GIS -U postgres -h localhost -p 5432 -f \"C:\\\\Users\\\\JHERNANDEZ\\\\OneDrive - Esri NOSA\\\\Documentos\\\\GitHub\\\\PostGIS_Python\\\\PostGIS_Python\\\\prueba.sql\"', returncode=0, stdout='BEGIN\\nROLLBACK\\n', stderr='psql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:2: ERROR:  la relaciÃ³n Â«temp_rasterÂ» ya existe\\npsql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:3: ERROR:  transacciÃ³n abortada, las Ã³rdenes serÃ¡n ignoradas hasta el fin de bloque de transacciÃ³n\\npsql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:4: ERROR:  transacciÃ³n abortada, las Ã³rdenes serÃ¡n ignoradas hasta el fin de bloque de transacciÃ³n\\npsql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:5: ERROR:  transacciÃ³n abortada, las Ã³rdenes serÃ¡n ignoradas hasta el fin de bloque de transacciÃ³n\\npsql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:6: ERROR:  transacciÃ³n abortada, las Ã³rdenes serÃ¡n ignoradas hasta el fin de bloque de transacciÃ³n\\n')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process"
    ]
   },
   {
