--- a/PostGIS_Python/Example_Connection.ipynb
+++ b/PostGIS_Python/Example_Connection.ipynb
@@ -770,18 +770,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
-    "from rasterio.io import MemoryFile\n",
     "import subprocess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,22 +799,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error al cargar el raster: Acceso denegado.\n",
-      "\n"
+      "Raster cargado exitosamente en PostGIS\n"
      ]
     }
    ],
    "source": [
     "# Ruta a la carpeta donde están raster2pgsql y psql\n",
     "pg_bin_path = r\"C:\\Program Files\\PostgreSQL\\16\\bin\"\n",
-    "sql_output_path = r\"C:\\Users\\JHERNANDEZ\\OneDrive - Esri NOSA\\Documentos\\GitHub\\PostGIS_Python\\PostGIS_Python\\prueba.sql\"\n",
+    "sql_output_path = r\"C:\\AMPC_Resources\\prueba.sql\"\n",
     "# Construir el comando con la ruta completa de raster2pgsql y psql\n",
     "cmd = fr'\"{pg_bin_path}\\raster2pgsql.exe\" -s 32619 -I -C \"{raster_path}\" >  {sql_output_path}'\n",
     "# Ejecutar el comando en la terminal\n",
@@ -830,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,22 +851,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args='\"C:\\\\Program Files\\\\PostgreSQL\\\\16\\\\bin\\\\psql.exe\" -d DB_GIS -U postgres -h localhost -p 5432 -f \"C:\\\\Users\\\\JHERNANDEZ\\\\OneDrive - Esri NOSA\\\\Documentos\\\\GitHub\\\\PostGIS_Python\\\\PostGIS_Python\\\\prueba.sql\"', returncode=0, stdout='BEGIN\\nROLLBACK\\n', stderr='psql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:2: ERROR:  la relaciÃ³n Â«temp_rasterÂ» ya existe\\npsql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:3: ERROR:  transacciÃ³n abortada, las Ã³rdenes serÃ¡n ignoradas hasta el fin de bloque de transacciÃ³n\\npsql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:4: ERROR:  transacciÃ³n abortada, las Ã³rdenes serÃ¡n ignoradas hasta el fin de bloque de transacciÃ³n\\npsql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:5: ERROR:  transacciÃ³n abortada, las Ã³rdenes serÃ¡n ignoradas hasta el fin de bloque de transacciÃ³n\\npsql:C:/Users/JHERNANDEZ/OneDrive - Esri NOSA/Documentos/GitHub/PostGIS_Python/PostGIS_Python/prueba.sql:6: ERROR:  transacciÃ³n abortada, las Ã³rdenes serÃ¡n ignoradas hasta el fin de bloque de transacciÃ³n\\n')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEGIN\n",
+      "CREATE TABLE\n",
+      "INSERT 0 1\n",
+      "CREATE INDEX\n",
+      "ANALYZE\n",
+      " addrasterconstraints \n",
+      "----------------------\n",
+      " t\n",
+      "(1 fila)\n",
+      "\n",
+      "COMMIT\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "process"
+    "print(process.stdout)"
    ]
   },
   {
